Added erb links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,10 @@
-<h1>
-  Hello Welcome to Varsha's Site
-</h1>
+
+
+<div class="help-callout text-center">
+  <h1>
+    Hello Welcome to DevMatch
+  </h1>
+  <h2>
+    A membership site Where entrepreneurs can meet devlopers
+  </h2>
+</div>
