--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">DevMatch</a>
+      <%= link_to "/", class:'navbar-brand' do %>
+          Dev Match
+      <% end %>
     </div>
 
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="/about">About</a>
+          <%= link_to 'About', '/about' %>
         </li>
       </ul>
 
