--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,9 @@
         <li>
           <%= link_to 'About', about_path %>
         </li>
+        <li>
+          <%= link_to 'Contact us', new_contact_path %>
+        </li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
