added create action for contacts to save into db

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,7 +1,9 @@
 <div class="container">
   <h1>Welcome on new page</h1>
 
-  <%= form_for '/contacts' do |f| %>
+  <%= form_for @contact do |f| %>
+      <%= flash[:notice] %>
+
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
       <%= f.label :email %>
