--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,7 +2,7 @@
   <h1>Welcome on new page</h1>
 
   <%= form_for @contact do |f| %>
-      <%= flash[:notice] %>
+      <%= flash[:error] %>
 
       <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control' %>
