--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -5,7 +5,7 @@
 </head>
 <body>
 <p>You have received message from Contact form, from
-  <%= "#{@name},  #{@email}. %> </p>
+  <%= "#{@name},  #{@email}." %> </p>
 <p><%= @body %> </p>
 </body>
 </html>
