--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,13 @@
     </div>
 
     <div class="collapse navbar-collapse" id="main-nav-collapse">
+      <div class="nav navbar-nav navbar-right">
+        <a href="/users/sign_in" class="btn btn-default navbar-btn">Log In</a>
+        <a href="/users/sign_up" class="btn btn-default navbar-btn">Sign In</a>
+      </div>
       <ul class="nav navbar-nav navbar-right">
-        <li>
-          <%= link_to 'About', about_path %>
-        </li>
-        <li>
-          <%= link_to 'Contact us', new_contact_path %>
-        </li>
+        <li><%= link_to 'About', about_path %></li>
+        <li><%= link_to 'Contact us', new_contact_path %></li>
       </ul>
 
     </div><!-- /.navbar-collapse -->
