--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,19 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to root_path, class:'navbar-brand' do %>
+      <%= link_to root_path, class: 'navbar-brand' do %>
           Dev Match
       <% end %>
     </div>
 
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <div class="nav navbar-nav navbar-right">
-        <%= link_to 'Log In', new_user_session_path, class: 'btn btn-default navbar-btn' %>
-        <%= link_to 'Sign In', new_user_registration_path, class: 'btn btn-default navbar-btn'%>
+        <% if user_signed_in? %>
+            <%= link_to 'Log out', destroy_user_session_path, method: 'delete', class: 'btn btn-default navbar-btn' %>
+        <% else %>
+            <%= link_to 'Log In', new_user_session_path, class: 'btn btn-default navbar-btn' %>
+            <%= link_to 'Sign In', new_user_registration_path, class: 'btn btn-default navbar-btn' %>
+        <% end %>
       </div>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to 'About', about_path %></li>
