--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,22 @@
-
-
-<div class="help-callout text-center">
-  <h1>
-    Hello Welcome to DevMatch
-  </h1>
-  <h2>
-    A membership site Where entrepreneurs can meet devlopers
-  </h2>
+<div class="home-callout text-center container-fluid">
+  <h1>Welcome to DevMatch</h1>
+  <h3>A membership site where entrepreneurs can meet developers.</h3>
+</div>
+<div class="container home-signup-links">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Basic Membership</h2>
+        <h4>Sign up for free and get basic access to the community.</h4>
+        <%= link_to "Sign up with Basic", "#", class: 'btn btn-primary btn-lg btn-block' %>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="well">
+        <h2 class="text-center">Pro Membership</h2>
+        <h4>Sign up for the pro account for $10/month and get access to the community and contact information!</h4>
+        <%= link_to "Sign up with Pro", "#", class: 'btn btn-success btn-lg btn-block' %>
+      </div>
+    </div>
+  </div>
 </div>
