--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,15 @@
 <h2>Sign up</h2>
 
 <% if params[:plan] == '2' %>
-    <h2>Pro Subscription </h2>
+  <h1>Pro Account</h1>
 <% else %>
-    <h2>Basic Subscription </h2>
+    <h1>Basic Account</h1>
 <% end %>
 
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
-
-    <div class="field">
-      <%= f.label :email %><br/>
-      <%= f.email_field :email, autofocus: true %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br/>
-      <%= f.password_field :password, autocomplete: "off" %>
-    </div>
-
-    <div class="field">
-      <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
+<% if params[:plan] == '2' %>
+    <%= render 'pro_form' %>
+<% else %>
+    <%= render 'basic_form' %>
 <% end %>
 
 <%= render "devise/shared/links" %>
